// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test <IconTrashCan /> component Test <IconTrashCan /> with props should correct render component with props 1`] = `
<div
  className="testContainer"
>
  <svg
    height="100%"
    viewBox="0 0 24 24"
    width="100%"
  >
    <path
      className="testPath"
      d="M9 19c0 .552-.448 1-1 1s-1-.448-1-1v-10c0-.552.448-1 1-1s1 .448 1 1v10zm4 0c0 .552-.448 1-1 1s-1-.448-1-1v-10c0-.552.448-1 1-1s1 .448 1 1v10zm4 0c0 .552-.448 1-1 1s-1-.448-1-1v-10c0-.552.448-1 1-1s1 .448 1 1v10zm5-17v2h-20v-2h5.711c.9 0 1.631-1.099 1.631-2h5.315c0 .901.73 2 1.631 2h5.712zm-3 4v16h-14v-16h-2v18h18v-18h-2z"
    />
  </svg>
</div>
`;

exports[`Test <IconTrashCan /> component Test <IconTrashCan /> without props should correct render component without props 1`] = `
<div
  className="container"
>
  <svg
    height="100%"
    viewBox="0 0 24 24"
    width="100%"
  >
    <path
      className="path"
      d="M9 19c0 .552-.448 1-1 1s-1-.448-1-1v-10c0-.552.448-1 1-1s1 .448 1 1v10zm4 0c0 .552-.448 1-1 1s-1-.448-1-1v-10c0-.552.448-1 1-1s1 .448 1 1v10zm4 0c0 .552-.448 1-1 1s-1-.448-1-1v-10c0-.552.448-1 1-1s1 .448 1 1v10zm5-17v2h-20v-2h5.711c.9 0 1.631-1.099 1.631-2h5.315c0 .901.73 2 1.631 2h5.712zm-3 4v16h-14v-16h-2v18h18v-18h-2z"
    />
  </svg>
</div>
`;
